compact tree view no longer messes vertical alignment of the Projects title. fixes #173

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -67,7 +67,7 @@
         background-color: darken(@app-background-color, 2%);
     }
     .compact-tree-view & {
-        li:not(.list-nested-item), li.list-nested-item > .list-item {
+        li:not(.list-nested-item):not(.tabBlender), li.list-nested-item > .list-item {
             line-height: 1.75rem;
         }
     }
